# phonocast

./: .pre-commit-config.yaml  Makefile  TODO.md  pyproject.toml
src/: api.py  config.py  schemas.py
src/speakers/: __init__.py  sonos.py
src/static/scripts/: jackcast.js
src/templates/: __init__.py  index.html
