[tool.poetry]
name = "phonocast"
version = "0.1.0"
description = ""
authors = ["Thomas Crha <thomas@9bitbyte.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
soco = "^0.29.1"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
uvicorn = "^0.22.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
taskipy = "^1.11.0"
pylint = "^2.17.4"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.settings]
use_vars = true

[tool.taskipy.variables]
path = "src"

[tool.taskipy.tasks]
lint = "pylint -j 8 -r n {path}"
test = "pytest -s"
black = "black {path}"
isort = "isort {path}"
mypy = "mypy {path}"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
lines_between_sections = 0
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
skip_gitignore = true
skip_glob = '*/.ipynb_checkpoints/*'

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
